--- a/typography/style.css
+++ b/typography/style.css
@@ -2,6 +2,10 @@
     font-family: Deutsch;
     src: url(Deutsch.ttf);
 }
+@font-face {
+    font-family: ComicZine;
+    src: url(comic_zine_ot.otf);
+}
 .lovecraft .quote p {
   font-family: Deutsch, sans-serif;
   font-size:3.5em;
@@ -31,12 +35,13 @@
   background-color: #A3DAFB;
 }
 .smith .quote-wrapper {
-  max-width: 900px;
+  max-width: 950px;
   padding: 100px 50px;
 }
 .smith .quote p {
-  font-family: 'Lora', cursive;
-  font-size: 2em;
+  font-family: 'ComicZine', cursive;
+  font-size: 2.5em;
+  line-height: 1.25em;
   letter-spacing:1px;
   color: #333;
 }
@@ -54,4 +59,5 @@ padding: 0px 20px 15px;
 .smith .credit p {
   font-family: 'PT Sans', sans-serif;
   font-size: 1.25em;
+  line-height:1.25em;
 }
