--- a/typography/style.css
+++ b/typography/style.css
@@ -33,10 +33,13 @@
 }
 .smith.quote-block {
   background-color: #A3DAFB;
+  overflow:hidden;
 }
 .smith .quote-wrapper {
   max-width: 950px;
   padding: 100px 50px;
+  position:relative;
+  z-index:5;
 }
 .smith .quote p {
   font-family: 'ComicZine', cursive;
@@ -57,7 +60,17 @@ padding: 0px 20px 15px;
   margin-top:-20px;
 }
 .smith .credit p {
-  font-family: 'PT Sans', sans-serif;
+  font-family: 'Lora', sans-serif;
   font-size: 1.25em;
   line-height:1.25em;
+}
+.smith .decorative {
+  font-family: 'Lora', sans-serif;
+  font-size:28em;
+  position:absolute;
+  right:0.25em;
+  z-index:1;
+  transform:rotate(6deg);
+  top: -0.25em;
+  color:#B5E2FC;
 }
