--- a/js/codeacademy/css/rock-paper-scissors.css
+++ b/js/codeacademy/css/rock-paper-scissors.css
@@ -1,5 +1,6 @@
 .game-container {
     max-width:800px;
+    width: 100%;
     margin: 10px auto 0;
     padding:15px 20px;
     border: 2px solid #eee;
@@ -58,12 +59,39 @@ sub.center {
   margin-top:2em;
 }
 .score-box {
-  width: 48%;
+  margin-bottom: 10px;
+}
+.pickContainer {
+  margin-bottom: 10px;
+}
+.pickContainer .pickText {
+  font-weight: 700;
+}
+.winnings .winBox {
+  width: 49%;
   display:inline-block;
+  vertical-align: top;
 }
-.score-box:nth-of-type(0) {
-  margin-left: 1%;
+.resultContainer {
+  margin-top:10px;
 }
-.score-box:nth-of-type(1) {
-  margin-right: 1%;
+.clearfix:after {
+     visibility: hidden;
+     display: block;
+     font-size: 0;
+     content: " ";
+     clear: both;
+     height: 0;
+     }
+.clearfix { display: inline-block; }
+/* start commented backslash hack \*/
+* html .clearfix { height: 1%; }
+.clearfix { display: block; }
+/* close commented backslash hack */
+
+@media screen and (max-width: 800px) {
+  .winnings .winBox {
+    width: 100%;
+    display: block;
+  }
 }
