--- a/typography/style-js.css
+++ b/typography/style-js.css
@@ -1,45 +1,14 @@
 @font-face {
-    font-family: Deutsch;
-    src: url(Deutsch.ttf);
-}
-@font-face {
     font-family: ComicZine;
     src: url(comic_zine_ot.otf);
 }
-.lovecraft .quote p {
-  font-family: Deutsch, sans-serif;
-  font-size:3.5em;
-  line-height:1.25em;
-}
-.lovecraft .quote p span::selection {
-    background-color: #800000;
-}
-.lovecraft .quote p::selection {
-    background-color: #800000;
-}
-.lovecraft .quote p span {
-  color:#A30000;
-}
-.lovecraft .quote p.credit {
-  font-family: 'Archivo Black', sans-serif;
-  font-size: 1.5em;
-  line-height: 1.25em;
-  text-align:right;
-  letter-spacing:1px;
-  padding-top:50px;
-}
-.lovecraft.quote-block {
-  background-color:#000;
-}
-.lovecraft .quote-wrapper {
-  max-width:1000px;
-  margin:0 auto;
-  padding: 100px 0;
-  color:#eee;
+html {
+  background-color: #A3DAFB;
 }
 .smith.quote-block {
-  background-color: #A3DAFB;
   overflow:hidden;
+  max-width:1275px;
+  margin:10% auto 0;
 }
 .smith .quote-wrapper {
   max-width: 950px;
@@ -81,10 +50,11 @@ padding: 0px 20px 15px;
 .smith .decorative {
   font-family: 'Lora', sans-serif;
   font-size:28em;
-  position:absolute;
+  position:relative;
   right:0.25em;
   z-index:1;
   transform:rotate(6deg);
   top: -0.25em;
   color:#B5E2FC;
+  float:right;
 }
