--- a/typography/style-lc.css
+++ b/typography/style-lc.css
@@ -33,3 +33,8 @@ html {
   padding: 100px 0;
   color:#eee;
 }
+@media screen and (max-width:1250px) {
+  .lovecraft .quote-wrapper {
+    max-width: 85%;
+}
+}
