--- a/typography/style-js.css
+++ b/typography/style-js.css
@@ -65,6 +65,7 @@ padding: 0px 20px 15px;
   }
   .smith .decorative {
     right: initial;
+    font-size: 45em;
     z-index: 1;
     top: initial;
     float: none;
@@ -75,5 +76,18 @@ padding: 0px 20px 15px;
   }
   .smith.quote-block {
     margin: 5% auto 0;
+  }
+  .smith .quote {
+    padding: 0 50px 15px;
+  }
+  .smith .quote p {
+    font-size:6.5em;
+    margin: 0.25em 0;
+  }
+  .smith .credit {
+    padding: 5px 30px;
+  }
+  .smith .credit p {
+    font-size: 2.75em;
   }
 }
