--- a/js/angular/codecademy/css/main.css
+++ b/js/angular/codecademy/css/main.css
@@ -78,8 +78,7 @@ html, body {
    line-height: 80px;
    text-align: center;
    width: 80px;
- position: relative;
-  float:right;
+ position: absolute;
  top: -40px;
  right: 20px;
 }
