--- a/js/angular/chara-select/css/main.css
+++ b/js/angular/chara-select/css/main.css
@@ -6,6 +6,30 @@
 .equipment li {
     margin-bottom: 10px;
 }
-.base-stats img {
+.base-stats img, .character-row img {
     width:100%;
+}
+.character-row {
+    margin: 10px 0;
+}
+.character-buttons {
+    width:100%;
+}
+.character-card {
+    border:#eee 1px solid;
+    padding: 20px;
+}
+.chara-card-button {
+    text-align:center;
+    padding: 10px 15px;
+    width:50%;
+    color:#fff;
+}
+.chara-card-button.bio-button {
+    background-color:blue;
+    float:left;
+}
+.chara-card-button.add-button {
+    background-color:red;
+    float:right;
 }
