More bubbles and font switch

--- a/js/animejs/surprise/style.css
+++ b/js/animejs/surprise/style.css
@@ -1,3 +1,15 @@
+@font-face {
+  font-family: 'homemade_appleregular';
+  src: url("HomemadeApple-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'caveatregular';
+  src: url("caveat-regular-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
 .square, .circle {
   pointer-events: none;
   position: relative;
@@ -35,12 +47,17 @@
 .text {
   display: inline-block;
   position: relative;
+  font-family: 'homemade_appleregular', cursive;
   font-size: 2em;
   opacity: .5;
-  font-family: 'Indie Flower', cursive;
+  line-height: 1.25em;
   text-align: center;
   opacity: 0;
   color: #940400;
+}
+
+.text span {
+  font-family: 'caveatregular', cursive;
 }
 
 .circle {
@@ -63,6 +80,38 @@
 .circle.circ4 {
   left: 90vw;
   top: 90vh;
+}
+.circle.circ5 {
+  left: 23vw;
+  top: 74vh;
+  transform: scale(0);
+}
+.circle.circ5.circcont {
+  transform: scale(1);
+}
+.circle.circ6 {
+  left: 3vw;
+  top: 23vh;
+  transform: scale(0);
+}
+.circle.circ6.circcont {
+  transform: scale(1);
+}
+.circle.circ7 {
+  left: 93vw;
+  top: 46vh;
+  transform: scale(0);
+}
+.circle.circ7.circcont {
+  transform: scale(1);
+}
+.circle.circ8 {
+  left: 72vw;
+  top: 39vh;
+  transform: scale(0);
+}
+.circle.circ8.circcont {
+  transform: scale(1);
 }
 .circle.circcont {
   top: 110vh;
