--- a/js/animejs/surprise/style.css
+++ b/js/animejs/surprise/style.css
@@ -31,6 +31,28 @@
   overflow: visible;
 }
 
+.smallheart {
+  position: absolute;
+  opacity: 0;
+  width: 10px;
+  height: 10px;
+}
+.smallheart.heart1 {
+  left: 20vw;
+  top: 25vh;
+  transform: scale(0);
+}
+.smallheart.heart2 {
+  left: 72vw;
+  top: 65vh;
+  transform: scale(0);
+}
+.smallheart.heart3 {
+  left: 10vw;
+  top: 70vh;
+  transform: scale(0);
+}
+
 .heart.fillheart {
   opacity: 0;
 }
