--- a/js/animejs/surprise/style.scss
+++ b/js/animejs/surprise/style.scss
@@ -179,3 +179,8 @@ body .container {
     width: 100vw;
     overflow: hidden;
 }
+@media screen and (max-width: 767px) {
+    .smallheart {
+        display:none;
+    }
+}
