--- a/js/animejs/surprise/style.css
+++ b/js/animejs/surprise/style.css
@@ -182,4 +182,10 @@ body .container {
   overflow: hidden;
 }
 
+@media screen and (max-width: 767px) {
+  .smallheart {
+    display: none;
+  }
+}
+
 /*# sourceMappingURL=style.css.map */
